--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-slider": "^1.2.3",
-    "axios": "^1.8.1",
+    "axios": "^1.9.0",
+    "framer-motion": "^12.10.5",
     "next": "15.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-hot-toast": "^2.5.2",
     "react-spinners": "^0.15.0",
+    "use-debounce": "^10.0.4",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
   },
