--- a/package.json
+++ b/package.json
@@ -12,15 +12,21 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^4.1.3",
+    "@microsoft/signalr": "^8.0.7",
+    "@nextui-org/react": "^2.6.11",
     "@radix-ui/react-slider": "^1.2.3",
     "axios": "^1.9.0",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.10.5",
+    "lucide-react": "^0.511.0",
     "next": "15.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
     "react-spinners": "^0.15.0",
+    "tailwind-merge": "^3.3.0",
     "use-debounce": "^10.0.4",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
