--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
     "@microsoft/signalr": "^8.0.7",
     "@nextui-org/react": "^2.6.11",
     "@radix-ui/react-slider": "^1.2.3",
+    "@types/react-datepicker": "^7.0.0",
     "axios": "^1.9.0",
+    "chart.js": "^4.4.9",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.10.5",
     "lucide-react": "^0.511.0",
     "next": "15.2.0",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
